# Enclave

./: .gitignore  README.md
enclave/: .gitignore  build.bat  package-lock.json  package.json
enclave-relay/: Cargo.toml
enclave-relay/src/: main.rs
enclave/src/: app.css
enclave/src-tauri/: Cargo.toml  tauri.conf.json
enclave/src-tauri/src/: logger.rs  main.rs  p2p.rs
enclave/src-tauri/src/db/: mod.rs
enclave/src-tauri/src/db/models/: blocked_user.rs  direct_message.rs  friend.rs  friend_request.rs  identity.rs  mod.rs  nickname.rs  post.rs  user.rs
enclave/src-tauri/src/p2p/: command_handler.rs  config.rs  event_handler.rs  mod.rs  node.rs  types.rs
enclave/src/lib/: state.ts  types.ts  utils.ts
enclave/src/lib/components/: ContextMenu.svelte  DirectMessages.svelte  Posts.svelte  Sidebar.svelte
enclave/src/lib/components/modals/: FriendRequestsModal.svelte  ProfileModal.svelte  RelaySettingsModal.svelte  SendFriendRequestModal.svelte
enclave/src/routes/: +layout.ts  +page.svelte
