[package]
name = "enclave"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.54", features = [
    "tcp",
    "noise",
    "yamux", 
    "gossipsub",
    "kad",
    "request-response",
    "cbor",
    "tokio"
] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"


