[package]
name = "enclave"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.56", features = [
    "tcp",
    "noise",
    "yamux", 
    "gossipsub",
    "kad",
    "request-response",
    "cbor",
    "tokio",
    "relay",
    "dcutr",
    "ping"
] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
chrono = "0.4.43"
log = "0.4.29"
once_cell = "1.21.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
libp2p-core = "0.43.2"
rand = "0.9.2"


